# DRF_hw

./: .env.exmpl  README.md  courses_lessons.json  coverage_report.txt  payments.json  pyproject.toml  users.json
config/: settings.py  urls.py
courses_lessons/: apps.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses_lessons/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payments.py  0004_alter_payments_payment_date.py  0005_subscription.py  0006_payment_card.py  0007_payment_card_course.py  0008_rename_payment_card_paymentcard.py
